src/test/ui/borrowck/issue-45983.stderr
error[E0521]: borrowed data escapes outside of closure
  --> $DIR/issue-45983.rs:10:18
   |
LL |     let mut x = None;
   |         ----- `x` declared here, outside of the closure body
LL |     give_any(|y| x = Some(y));
   |               -  ^^^^^^^^^^^ `y` escapes the closure body here
   |               |
   |               `y` is a reference that is only valid in the closure body

error: aborting due to previous error

